--- a/informe/hito-1.Rmd
+++ b/informe/hito-1.Rmd
@@ -216,7 +216,8 @@ ggplot(thyroid.df) +
 ```
 
 ### Histogramas 
-
+Se realizan los histogramas basados en edad y género, además se incluye un histograma que considera los diagnósticos previamente descritos. 
+En la primera parte, se decide crear una nueva columna que tenga consigo las edades pero distribuidas en rangos, todo esto con el fin de poder encontrar mejores resultados posteriormente.
 ```{r}
 # Primero se crea una columna donde se tengan los años por rangos
 rangos <- c(0, 18, 30, 40, 50, 60,70,80,90, Inf)
@@ -232,6 +233,9 @@ ggplot(thyroid.df, aes(x = grupo_edad, fill = sex)) +
   theme_minimal() +
   scale_fill_manual(values = c("M" = "#00798c", "F" = "#d1495b"))
 ```
+A partir del histograma, se observa que gran parte de los pacientes son del sexo femenino, además, se tiene que la población con mayor frecuencia dentro de los datos es la de entre 61-70 años, es decir, este estudio se concentra en adultos mayores, y la mayoría de ellos son del sexo femenino. Por otra parte, se tiene algunas barras de color gris, los cuales presentan información desconocida o no entregada por parte de los pacientes.
+
+A continuación, se presenta un histograma que muestra la frecuencia de los diagnósticos, cabe destacar que en un principio se decide alterar la base de datos, de manera que los datos que aparecen "-" se eliminan para así poder visualizar de mejor manera los datos.
 ```{r}
 #Se deja una nueva data eliminando los datos sin responder
 datos_limpios <- thyroid.df %>%
@@ -245,6 +249,9 @@ ggplot(datos_limpios, aes(x = target)) +
        y = "Frecuencia") +
   theme_minimal()
 ```
+A partir del histograma, se observa que la mayoría de los pacientes están diagnósticados con "K - enfermedad no tiroidea concurrente" y luego le sigue "G - Hipotiroidismo compensado".
+
+
 ### Relación entre variables: Cramer's V, ANOVA Test y Correlación Lineal
 
 Dado que muchas de nuestras variables son categóricas, no podemos calcular la correlación entre variables como lo hacemos con las variables numéricas. Es por ello, que utilizamos Cramer's V. Cramer's V mide la fuerza de asociación entre dos variables categóricas. Va entre 0 y 1, donde 0 representa una asociación débil, y 1 una fuerte.
