--- a/informe/hito-1.Rmd
+++ b/informe/hito-1.Rmd
@@ -415,4 +415,8 @@ Cada una de estas preguntas se responderán posteriormente, a partir de distinto
 ## Contribución de cada integrante
 Nahuel Sanhueza se encargó de la parte de limpieza de datos y los diagramas de dispersion para atributos numéricos. Catalina Carrasco se encargó de la realización de Bloxplots y tablas correlacion (Cramer's V, ANOVA test y correlación). Joaquín Herrera se encargó de realizar el contexto, motivación y características principales de los datos. Javiera Donoso se encargó de la creación de los histogramas, el proceso de agregacion (promedio valores examenes medicos) agrupando por rango etario y la formulación de preguntas y problemas. Macarena Ríos se encargó de realizar la presentación y agregar los datos obtenidos por los demás compañeros.
 
+## Bibliografía
+[1]https://www.comunicaciontucuman.gob.ar/noticia/salud/219811/dia-internacional-tiroides-buscan-concientizar-acerca-importancia
+[2]https://salud.nih.gov/recursos-de-salud/nih-noticias-de-salud/problemas-en-la-tiroides
+[3] https://www.cancer.net/es/tipos-de-c%C3%A1ncer/c%C3%A1ncer-de-tiroides/estad%C3%ADsticas#:~:text=En%20el%20caso%20del%20c%C3%A1ncer%20folicular%20tiroideo%20metast%C3%A1sico%2C%20la%20tasa,la%20tasa%20es%20del%204%20%25.
 
